--- a/HybridRecommender/ClassRecommender.ipynb
+++ b/HybridRecommender/ClassRecommender.ipynb
@@ -2,6 +2,317 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "215f716c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import dot\n",
+    "from numpy.linalg import norm\n",
+    "%matplotlib inline\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "95486b29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged2020 = pd.read_pickle(\"../Data/merged.pkl\")\n",
+    "merged2021 = pd.read_pickle(\"../Data/merged2.pkl\")\n",
+    "merged2022 = pd.read_pickle(\"../Data/merged3.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d27e06ef",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Автотранспорт</th>\n",
+       "      <th>Алкогольный магазин</th>\n",
+       "      <th>Бар \"Коктейль\"</th>\n",
+       "      <th>Барбершоп</th>\n",
+       "      <th>Не определено</th>\n",
+       "      <th>Покупка одежды</th>\n",
+       "      <th>Покупка техники</th>\n",
+       "      <th>Покупки Ozon</th>\n",
+       "      <th>Ресторан \"Буйвол\"</th>\n",
+       "      <th>Такси</th>\n",
+       "      <th>Турагенство</th>\n",
+       "      <th>Сумма расходов</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID Клиента</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10158439</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10159782</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10162467</th>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>11</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10162557</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10170484</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11265397</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11267844</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11267856</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>147</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11336361</th>\n",
+       "      <td>6</td>\n",
+       "      <td>23</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11371251</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187670</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>250 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Автотранспорт  Алкогольный магазин  Бар \"Коктейль\"  Барбершоп  \\\n",
+       "ID Клиента                                                                  \n",
+       "10158439                0                    0               9         11   \n",
+       "10159782                0                    0               2          1   \n",
+       "10162467                0                   31              11         32   \n",
+       "10162557                0                    0               0          2   \n",
+       "10170484                0                    0               0          2   \n",
+       "...                   ...                  ...             ...        ...   \n",
+       "11265397                0                    2               3          2   \n",
+       "11267844                0                    0               0          0   \n",
+       "11267856                0                    1               0        147   \n",
+       "11336361                6                   23              12         10   \n",
+       "11371251                0                    0               0          0   \n",
+       "\n",
+       "            Не определено  Покупка одежды  Покупка техники  Покупки Ozon  \\\n",
+       "ID Клиента                                                                 \n",
+       "10158439                0               0                5             0   \n",
+       "10159782                0               0                0             0   \n",
+       "10162467                2               0                0             2   \n",
+       "10162557                0               0                0             0   \n",
+       "10170484                0               0                0             0   \n",
+       "...                   ...             ...              ...           ...   \n",
+       "11265397                1               0                1             1   \n",
+       "11267844                2               0                0             0   \n",
+       "11267856                1               0                0             0   \n",
+       "11336361               10              13               13             6   \n",
+       "11371251                0               0                0             0   \n",
+       "\n",
+       "            Ресторан \"Буйвол\"  Такси  Турагенство  Сумма расходов  \n",
+       "ID Клиента                                                         \n",
+       "10158439                    2      0            0           23544  \n",
+       "10159782                    0      0            0            6254  \n",
+       "10162467                    0      2            0           24936  \n",
+       "10162557                    0      0            0              76  \n",
+       "10170484                    0      0            0           24401  \n",
+       "...                       ...    ...          ...             ...  \n",
+       "11265397                    3      1            0           14175  \n",
+       "11267844                    0      0            0             958  \n",
+       "11267856                    0      0            0             290  \n",
+       "11336361                   15      6            5            4477  \n",
+       "11371251                    0      0            1          187670  \n",
+       "\n",
+       "[250 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged2022"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "7d9df7e2",
    "metadata": {},
@@ -9,32 +320,26 @@
    "source": [
     "class HybridRecommender:\n",
     "    def __init__(self, movies_df, ratings_df):\n",
-    "        self.movies_df = movies_df\n",
-    "        self.ratings_df = ratings_df\n",
-    "        self.movie_features = None\n",
-    "        self.user_ratings = None\n",
-    "        self.user_predictions = None\n",
-    "        self.movie_predictions = None\n",
-    "        self.hybrid_predictions = None\n",
-    "\n",
-    "    def preprocess_data(self):\n",
-    "        self.movie_features = self.movies_df['genres'].str.get_dummies(sep='|')\n",
-    "        self.user_ratings = self.ratings_df.pivot(index='userId', columns='movieId', values='rating')\n",
-    "\n",
+    "        self.clients_vector = None\n",
+    "        \n",
+    "    \n",
+    "    def cos_sim(a,b):\n",
+    "        similarity = dot(a, b)/(norm(a)*norm(b))\n",
+    "        return similarity\n",
+    "    \n",
     "    def collaborative_filtering(self):\n",
-    "        similar_users = cosine_similarity(self.user_ratings)\n",
-    "        self.user_predictions = pd.DataFrame(similar_users.dot(self.user_ratings.fillna(0)), index=self.user_ratings.index, columns=self.user_ratings.columns)\n",
-    "\n",
+    "        similar_users = cos_sim(self.user_ratings)\n",
+    "        \n",
     "    def content_filtering(self):\n",
-    "        cv = CountVectorizer()\n",
-    "        movie_matrix = cv.fit_transform(self.movies_df['genres'])\n",
-    "        movie_similarities = cosine_similarity(movie_matrix)\n",
-    "        self.movie_predictions = pd.DataFrame(movie_similarities.dot(self.movie_features), index=self.movies_df.index, columns=self.movie_features.columns)\n",
+    "#         cv = CountVectorizer()\n",
+    "#         movie_matrix = cv.fit_transform(self.movies_df['genres'])\n",
+    "#         movie_similarities = cosine_similarity(movie_matrix)\n",
+    "#         self.movie_predictions = pd.DataFrame(movie_similarities.dot(self.movie_features), index=self.movies_df.index, columns=self.movie_features.columns)\n",
     "\n",
     "    def hybrid_filtering(self):\n",
     "        self.hybrid_predictions = self.user_predictions.add(self.movie_predictions, fill_value=0)\n",
     "\n",
-    "    def recommend_movies(self, user_id, num_recommendations=10):\n",
+    "    def recommend_clients(self, user_id, num_recommendations=10):\n",
     "        user_ratings = self.ratings_df[self.ratings_df['userId'] == user_id]\n",
     "        user_ratings = user_ratings.set_index('movieId')\n",
     "        user_predictions = self.hybrid_predictions.loc[user_id].drop(user_ratings.index)\n",
@@ -53,6 +358,16 @@
     "recommender.hybrid_filtering()\n",
     "recommended_movies = recommender.recommend_movies(user_id=1)\n",
     "print(recommended_movies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8022ad72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "УРАААААААААААААААААААААААААААААа"
    ]
   }
  ],
